--- a/.github/workflows/Swift-Deploy.yml
+++ b/.github/workflows/Swift-Deploy.yml
@@ -31,12 +31,12 @@ jobs:
           pwd
           ls -al
           wget -P ./scripts/ https://github.com/grpc/grpc-swift/releases/download/1.6.1/protoc-grpc-swift-plugins-linux-x86_64-1.6.1.zip
-          unzip ./protoc-grpc-swift-plugins-linux-x86_64-1.6.1.zip
+          unzip ./scripts/protoc-grpc-swift-plugins-linux-x86_64-1.6.1.zip
           DIR="./build/Sources/AswProtobuf"
           mkdir -p ./build/Sources/AswProtobuf
-          for file in *.proto
+          for file in "./scripts/"*.proto
           do
-          	protoc --swift_out=$DIR --grpc-swift_out=$DIR -I . "$file"
+          	protoc --swift_out=$DIR --grpc-swift_out=$DIR -I ./scripts "$file"
           	echo "WORK : [$file]"
           done
       
