--- a/.github/workflows/Swift-Deploy.yml
+++ b/.github/workflows/Swift-Deploy.yml
@@ -27,7 +27,7 @@ jobs:
           
       - name: Run a one-line script
         run: |
-          cp -R ./protos/v1 ./scripts
+          cp -R ./protos/v1/* ./scripts
           pwd
           ls -al
           wget -P ./scripts/ https://github.com/grpc/grpc-swift/releases/download/1.6.1/protoc-grpc-swift-plugins-linux-x86_64-1.6.1.zip
