--- a/.github/workflows/Swift-Deploy.yml
+++ b/.github/workflows/Swift-Deploy.yml
@@ -29,11 +29,12 @@ jobs:
         run: |
           cp -R ./protos/v1/* ./scripts
           wget https://github.com/grpc/grpc-swift/releases/download/1.6.1/protoc-grpc-swift-plugins-linux-x86_64-1.6.1.zip
-          unzip ./protoc-grpc-swift-plugins-linux-x86_64-1.6.1.zip
+          unzip ./protoc-grpc-swift-plugins-linux-x86_64-1.6.1.zip -d /usr/bin
           DIR="./build/Sources/AswProtobuf"
           mkdir -p ./build/Sources/AswProtobuf
           ls
           pwd
+          $PATH
           for file in "./scripts/"*.proto
           do
           	protoc --swift_out=$DIR --grpc-swift_out=$DIR -I ./scripts "$file"
