--- a/.github/workflows/Swift-Deploy.yml
+++ b/.github/workflows/Swift-Deploy.yml
@@ -51,6 +51,9 @@ jobs:
         with:
           add: 'Sources/AswProtobuf'
           ref: "release-v1-swift"
+          author_name: 'github-action [BOT]'
+          author_email: 'aoikazto@naver.com'
+          
         env:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
           
