--- a/.github/workflows/Go-Deploy.yml
+++ b/.github/workflows/Go-Deploy.yml
@@ -55,7 +55,7 @@ jobs:
           find . -name "*.go" -delete
           pwd
           ls
-          cp -f ./* ../idl/
+          cp -f ../test/* ../idl/
     
       - name: Add & Commit
         uses: EndBug/add-and-commit@v4.4.0
