--- a/.github/workflows/Swift-Deploy.yml
+++ b/.github/workflows/Swift-Deploy.yml
@@ -30,8 +30,8 @@ jobs:
           cp -R ./protos/v1/* ./scripts
           wget https://github.com/grpc/grpc-swift/releases/download/1.6.1/protoc-grpc-swift-plugins-linux-x86_64-1.6.1.zip
           sudo unzip ./protoc-grpc-swift-plugins-linux-x86_64-1.6.1.zip -d /usr/bin
-          DIR="./Sources/AswProtobuf"
-          mkdir -p ./Sources/AswProtobuf
+          DIR="./Sources/AswProtobuf_tmp"
+          mkdir -p ./Sources/AswProtobuf_tmp
           ls
           pwd
           for file in "./scripts/"*.proto
@@ -45,6 +45,12 @@ jobs:
         with:
           ref: "release-v1-swift"
           clean: false
+          
+      - name: copy
+        run: |
+          rm -rf ./Sources/AswProtobuf
+          mkdir -p ./Sources/AswProtobuf
+          cp -R ./Sources/AswProtobuf_tmp/* ./Sources/AswProtobuf
     
       - name: Add & Commit
         uses: EndBug/add-and-commit@v4.4.0
