--- a/.github/workflows/Go-Deploy.yml
+++ b/.github/workflows/Go-Deploy.yml
@@ -74,3 +74,9 @@ jobs:
           github_token: ${{ secrets.GIT_TOKEN }}
           branch: "release-v1-go"
           
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.36.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+          WITH_V: true
+          RELEASE_BRANCHES: "release-v1-go"
