--- a/.github/workflows/Swift-Deploy.yml
+++ b/.github/workflows/Swift-Deploy.yml
@@ -27,13 +27,12 @@ jobs:
           
       - name: Run a one-line script
         run: |
+          mkdir -p ./scripts
           cp -R ./protos/v1/* ./scripts
           wget https://github.com/grpc/grpc-swift/releases/download/1.6.1/protoc-grpc-swift-plugins-linux-x86_64-1.6.1.zip
           sudo unzip ./protoc-grpc-swift-plugins-linux-x86_64-1.6.1.zip -d /usr/bin
           DIR="./Sources/AswProtobuf_tmp"
           mkdir -p ./Sources/AswProtobuf_tmp
-          ls
-          pwd
           for file in "./scripts/"*.proto
           do
           	protoc --swift_out=$DIR --grpc-swift_out=$DIR -I ./scripts "$file"
