--- a/.github/workflows/Go-Deploy.yml
+++ b/.github/workflows/Go-Deploy.yml
@@ -67,7 +67,8 @@ jobs:
           
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_KOEN }}
-          
+    
+    # BOT TOKEN인뎅..?
       - name: Push commit
         uses: ad-m/github-push-action@master
         with:
