--- a/.github/workflows/Go-Deploy.yml
+++ b/.github/workflows/Go-Deploy.yml
@@ -65,18 +65,18 @@ jobs:
           author_name: 'Piorosen-Bot'
           author_email: 'ckwngud1@gmail.com'
         env:
-          GITHUB_TOKEN: ${{ secrets.BOT_KOEN }}
+          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
     
     # BOT TOKEN인뎅..?
       - name: Push commit
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.BOT_KOEN }}
+          github_token: ${{ secrets.BOT_TOKEN }}
           branch: "release-v1-go"
           
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.36.0
         env:
-          GITHUB_TOKEN: ${{ secrets.BOT_KOEN }}
+          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
           WITH_V: true
           RELEASE_BRANCHES: "release-v1-go"
