--- a/.github/workflows/Swift-Deploy.yml
+++ b/.github/workflows/Swift-Deploy.yml
@@ -57,7 +57,7 @@ jobs:
           ref: "release-v1-swift"
           author_name: 'Piorosen-Bot'
           author_email: 'ckwngud1@gmail.com'
-          message: ${{ github.event.head_commit.message }}
+          message: "[BOT] ${{ github.event.head_commit.message }}"
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
           
