--- a/.github/workflows/Swift-Deploy-server-comm.yml
+++ b/.github/workflows/Swift-Deploy-server-comm.yml
@@ -32,7 +32,7 @@ jobs:
           sudo unzip ./protoc-grpc-swift-plugins-linux-x86_64-1.6.1.zip -d /usr/bin
           DIR="./Sources/AswProtobuf_tmp"
           mkdir -p ./Sources/AswProtobuf_tmp
-          for file in "./scripts/"*.proto
+          for file in "./scripts/servercomm/"*.proto
           do
           	protoc --swift_opt=Visibility=Public --grpc-swift_opt=Visibility=Public --swift_out=$DIR --grpc-swift_out=$DIR -I ./scripts "$file"
           	echo "WORK : [$file]"
