--- a/.github/workflows/Go-Deploy.yml
+++ b/.github/workflows/Go-Deploy.yml
@@ -37,10 +37,18 @@ jobs:
           go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.26
           go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1
           export PATH="$PATH:$HOME/go/bin"
+
+          cd servercomm
           for file in *.proto
           do
             protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative -I . "$file"
           done
+          cd ../kubernetes
+          for file in *.proto
+          do
+            protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative -I . "$file"
+          done
+          cd ..
           find . -name "*.proto" -delete
       
       - name: Checkout gh-pages branch
