--- a/.github/workflows/Go-Deploy.yml
+++ b/.github/workflows/Go-Deploy.yml
@@ -38,16 +38,19 @@ jobs:
           go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1
           export PATH="$PATH:$HOME/go/bin"
 
-          cd servercomm
+          cd kubernetes
           for file in *.proto
           do
             protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative -I . "$file"
+          	echo "WORK : [$file]"
           done
-          cd ../kubernetes
+          cd ../servercomm
           for file in *.proto
           do
             protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative -I . "$file"
+          	echo "WORK : [$file]"
           done
+          
           cd ..
           find . -name "*.proto" -delete
       
