--- a/.github/workflows/Go-Deploy.yml
+++ b/.github/workflows/Go-Deploy.yml
@@ -37,8 +37,9 @@ jobs:
           go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.26
           go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1
           export PATH="$PATH:$HOME/go/bin"
-
+          echo "KU<"
           cd kubernetes
+          echo "KU<2"
           for file in *.proto
           do
             protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative -I . "$file"
