--- a/.github/workflows/Go-Deploy.yml
+++ b/.github/workflows/Go-Deploy.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           mkdir ../test
           cp -R ./protos/v1/ ../test
-          cd ../test
+          cd ../test/v1
           
           go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.26
           go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1
