--- a/.github/workflows/Go-Deploy.yml
+++ b/.github/workflows/Go-Deploy.yml
@@ -37,11 +37,8 @@ jobs:
           go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.26
           go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1
           export PATH="$PATH:$HOME/go/bin"
-          echo "KU<"
-          ls
-          pwd
+          
           cd kubernetes
-          echo "KU<2"
           for file in *.proto
           do
             protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative -I . "$file"
@@ -68,7 +65,7 @@ jobs:
           find . -name "*.go" -delete
           pwd
           ls
-          cp -f ../test/* .
+          cp -f ../test/v1 .
     
       - name: Add & Commit
         uses: EndBug/add-and-commit@v4.4.0
